<resources>
    <string name="app_name">Unit Converter</string>
    <string name="select_category">Select Category</string>
    <string name="enter_value">Enter Value</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="invalid_input">Invalid input</string>
    <string name="hint_enter_number">Enter a number</string>
    <string name="error_empty_value">Please enter a value</string>
    <string name="result">Result</string>
    <string name="copy">Copy</string>
    <string name="copied_to_clipboard">Result copied to clipboard</string>
</resources> 